--- a/myers-briggs-eda-preprocessing-training.ipynb
+++ b/myers-briggs-eda-preprocessing-training.ipynb
@@ -3164,12 +3164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'vectorizer.pkl'\n",
-    "pickle.dump(vectorizerorizer,open(filename, 'wb'))"
+    "pickle.dump(vectorizer,open(filename, 'wb'))"
    ]
   }
  ],
