--- a/myers-briggs-eda-preprocessing-training.ipynb
+++ b/myers-briggs-eda-preprocessing-training.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"mb_data.csv\")\n",
+    "data = pd.read_csv(\"dataset/mb_data.csv\")\n",
     "data.head()"
    ]
   },
